[gd_scene load_steps=6 format=3 uid="uid://bmeuceiap3ed7"]

[ext_resource type="Script" uid="uid://e37ek0o6qoxh" path="res://scenes/office/main_office.gd" id="1_pxbkl"]
[ext_resource type="AudioStream" uid="uid://dju6ndtjeqvbi" path="res://assets/sounds/office/Fnaf Nose honk.mp3" id="2_oa1tt"]
[ext_resource type="Texture2D" uid="uid://sl2qbvh7slu2" path="res://assets/office/fnaf_office.png" id="2_vu38d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxbkl"]
size = Vector2(530, 1121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu38d"]
size = Vector2(546, 1172.5)

[node name="MainOffice" type="Node2D"]
script = ExtResource("1_pxbkl")

[node name="honk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oa1tt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_vu38d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2DLeft-Fast" type="Area2D" parent="Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2DLeft-Fast"]
position = Vector2(-709, 0.5)
shape = SubResource("RectangleShape2D_pxbkl")

[node name="Area2DRight-Fast" type="Area2D" parent="Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2DRight-Fast"]
position = Vector2(701, -29.25)
shape = SubResource("RectangleShape2D_vu38d")

[node name="Button" type="Button" parent="."]
offset_left = -197.0
offset_top = -189.0
offset_right = -168.0
offset_bottom = -174.0

[connection signal="mouse_entered" from="Camera2D/Area2DLeft-Fast" to="." method="_on_area_2d_left_fast_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Area2DLeft-Fast" to="." method="_on_area_2d_left_fast_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Area2DRight-Fast" to="." method="_on_area_2d_right_fast_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Area2DRight-Fast" to="." method="_on_area_2d_right_fast_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
